--- a/src/app/modules/ventas/crear-venta/crear-venta.html
+++ b/src/app/modules/ventas/crear-venta/crear-venta.html
@@ -264,7 +264,7 @@
 <div id="ticket" class="ticket" *ngIf="facturaParaImprimir">
 
     <div class="t-center t-bold">ÓPTICA MACÍAS</div>
-    <div class="t-center t-small">RUC: 0999999999001</div>
+    <div class="t-center t-small">RUC: 0912477528001</div>
     <div class="t-center t-small">Pasaje - Ecuador</div>
 
     <div class="t-hr"></div>
@@ -273,6 +273,7 @@
         <div><b>FACTURA No:</b> {{ facturaParaImprimir.id }}</div>
         <div><b>Fecha:</b> {{ facturaParaImprimir.fecha | date:'dd/MM/yyyy HH:mm' }}</div>
         <div><b>Cliente:</b> {{ facturaParaImprimir.clienteNombre }}</div>
+        <div *ngIf="facturaParaImprimir.clienteTelefono"><b>Tel:</b> {{ facturaParaImprimir.clienteTelefono }}</div>
         <div><b>Método pago:</b> {{ facturaParaImprimir.metodoPago }}</div>
         <!-- ✅ INDICADOR DE CRÉDITO PERSONAL -->
         <div *ngIf="facturaParaImprimir.esCredito" class="t-small" style="margin-top: 4px; padding-top: 4px;">
