Exportanción HC y uso de ExcelJS

--- a/src/app/modules/productos/pages/importar-productos/importar-productos.html
+++ b/src/app/modules/productos/pages/importar-productos/importar-productos.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <h4 class="paso-title">Selecciona tu archivo Excel</h4>
-                    <p class="paso-subtitle">Formato: OPTICA MACIAS EL GUABO - PLANTILLA DE PRODUCTOS</p>
+                    <p class="paso-subtitle">Formato: OPTICA MACIAS PASAJE - PLANTILLA DE PRODUCTOS</p>
 
                     <div class="file-upload-wrapper">
                         <input type="file" class="file-input" id="fileInput" accept=".xlsx,.xls" (change)="onFileSelected($event)">
